# catan-engine

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build-and-test.yml  developer-documentation.yml
docs/: antora.yml
docs/config/: package-lock.json  package.json  playbook-head.yml
docs/config/ui/partials/: footer-content.hbs  head-styles.hbs  header-content.hbs
docs/modules/ROOT/pages/: index.adoc
include/catan_engine/map/: map.hpp  tile.hpp
src/map/: map.cpp  tile.cpp
tests/map/: test_map.cpp
